clean and fix linter error